--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "dependencies": {
     "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "@mantine/hooks": "^4.2.4",
+    "@emotion/styled": "^11.13.0",
+    "@mantine/hooks": "^7.13.4",
     "@mui/icons-material": "^5.6.2",
-    "@mui/material": "^5.6.4",
-    "@mui/styles": "^5.6.2",
+    "@mui/material": "^6.1.6",
+    "@mui/styles": "^6.1.6",
     "bootstrap": "^5.1.3",
     "docslider": "^3.0.1",
     "fullpage": "^1.5.1",
     "next": "12.1.6",
-    "react": "18.1.0",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.4.0",
     "react-device-detect": "^2.2.2",
     "react-dom": "18.1.0",
@@ -31,11 +31,11 @@
     "react-responsive-carousel": "^3.2.23",
     "react-scroll": "^1.8.7",
     "react-use-scroll-direction": "^0.1.0",
-    "styled-components": "^5.3.5"
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "17.0.31",
-    "@types/react": "18.0.8",
+    "@types/react": "18.3.12",
     "@types/react-dom": "18.0.3",
     "@types/react-image-gallery": "^1.0.5",
     "@types/react-scroll": "^1.8.3",
