--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "@types/styled-components": "^5.1.25",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.6",
-    "typescript": "4.6.4"
+    "typescript": "^5.6.3"
   }
 }
