--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "bootstrap": "^5.1.3",
     "docslider": "^3.0.1",
     "fullpage": "^1.5.1",
-    "next": "12.1.6",
+    "next": "^16.1.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.4.0",
     "react-device-detect": "^2.2.2",
